--- a/Sales.API/appsettings.json
+++ b/Sales.API/appsettings.json
@@ -1,9 +1,12 @@
 {
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DockerConnection": "Data Source=Lap12355\\SQLEXPRESS; Initial Catalog=Sales; User ID=SA;Password=12345;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  },
-  "AllowedHosts": "*"
+  }
 }
