--- a/Blazor.WEB/Blazor.WEB.csproj
+++ b/Blazor.WEB/Blazor.WEB.csproj
@@ -7,8 +7,28 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="Shared\GenericList.razor" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="7.0.11" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="7.0.11" PrivateAssets="all" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <UpToDateCheckInput Remove="Shared\GenericList.razor" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <_ContentIncludedByDefault Remove="Shared\GenericList.razor" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="Shared\GenericList.razor" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Pages\Countries\" />
   </ItemGroup>
 
 </Project>
