Creación de componentes Post, Get, Put y Delete en la API y en Blazor(Web).

--- a/Blazor.WEB/Blazor.WEB.csproj
+++ b/Blazor.WEB/Blazor.WEB.csproj
@@ -28,7 +28,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Pages\Countries\" />
+    <ProjectReference Include="..\Sales.Shared\Sales.Shared.csproj" />
   </ItemGroup>
 
 </Project>
